<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
		
	    <TextView
	        android:id="@+id/editorNameText"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/editorName"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <EditText
	        android:id="@+id/editorNameField"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="text"
	        android:ems="10" >
	
	        <requestFocus />
	    </EditText>
	
	    <TextView
	        android:id="@+id/editorPeopleText"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/editorPeople"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <EditText
	        android:id="@+id/editorPeopleField"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="number"
	        android:ems="10" />
	
	    <TextView
	        android:id="@+id/editorIngredientsText"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/editorIngredients"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <Button
	        android:id="@+id/editorIngredientsButton"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/editorIngredientsButton" />
	
	    <LinearLayout
	        android:id="@+id/editorIngredientsLayout"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >
	    </LinearLayout>
	    
	    <TextView
	        android:id="@+id/editorImageText"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/editorImage"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    
	    <ImageView 
	        android:id="@+id/photoResultView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:contentDescription="@string/editorImage" />
	
	    <Button
	        android:id="@+id/editorImageButton"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/editorImageButton" />
	
	    <TextView
	        android:id="@+id/editorDescriptionText"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/editorDescription"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <EditText
	        android:id="@+id/editorDescriptionField"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="textMultiLine" />
	
	    <Button
	        android:id="@+id/editorSaveButton"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/save" />
	    
</LinearLayout>
</ScrollView>