<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical" >


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_margin="1dp"
        android:layout_weight="0.02"
        android:background="@android:color/darker_gray"
        android:orientation="vertical" >



        <TextView
            android:id="@+id/popupNameText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingredientName"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/ingredientName"
            android:inputType="text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10" >

            <requestFocus />
        </EditText>



        <TextView
            android:id="@+id/popupQuantityText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingredientQuantity"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/ingredientQuantity"
            android:inputType="numberDecimal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10" />



        <TextView
            android:id="@+id/popupMeasureText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingredientMeasure"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/ingredientMeasure"
            android:inputType="text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10" />


        <Button
            android:id="@+id/saveIngredientButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />

	</LinearLayout>
</LinearLayout>